# dev

./: README.md
setup/win32-vs2013/: 1.update.bat  2.download.bat  3.prebuild.bat  4.build.bat  5.postbuild.bat  6.upload.bat  create_solution.bat  doall.bat
source/: CMakeLists.txt
source/ext/: CMakeLists.txt
source/ext/IniFile/: CIniFile.cpp  CIniFile.h
source/ext/IniTest/: main.cpp
source/test/: CMakeLists.txt
source/test/Mem/: main.cpp
source/test/cstring/: cstring.cpp  cstring.h  main.cpp
source/test/cvector/: cvector.h  main.cpp
source/test/smartpointer/: main.cpp
source/test/sstream/: sstream.cpp
source/win32/: CMakeLists.txt
source/win32/Process/: CMakeLists.txt  OnExit.cpp
